# fastapi-chat

./: .gitignore  Dockerfile  azure-pipelines.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: build.sh  docker-run.sh  get_version.py  schema.sql
src/: main.py
